@@ -1999,15 +1999,15 @@ install-plugins.info.size=Size
 install-plugins.info.releaseDate=Release date
 install-plugins.info.version=Version
 install-plugins.info.category=Category
+install-plugins.info.author=Author
+install-plugins.info.released=Released
+install-plugins.info.depends=Depends on
+install-plugins.info.optionalDepends=Optionally depends on
 
 install-plugins.totalSize={0} plugin(s), total size: {1}
 install-plugins.select-all=Select All
 install-plugins.install=Install
 install-plugins.show-updates=Show Updates
-
-install-plugins.info=<b>Author</b>: {0}\n\
-	<b>Released</b>: {1}\n\
-	{2}
 
 update-plugins.title=Update
 
